@@ -741,9 +741,7 @@ int _gnutls_io_check_recv(gnutls_session_t session, unsigned int ms)
 	gnutls_transport_ptr_t fd = session->internals.transport_recv_ptr;
 	int ret = 0, err;
 
-	if (unlikely
-	    (session->internals.pull_timeout_func == gnutls_system_recv_timeout
-	     && session->internals.pull_func != system_read)) {
+	if (NO_TIMEOUT_FUNC_SET(session)) {
 		_gnutls_debug_log("The pull function has been replaced but not the pull timeout.\n");
 		return gnutls_assert_val(GNUTLS_E_PULL_ERROR);
 	}
