@@ -37,6 +37,9 @@ inline static int _gnutls_record_buffer_get_size(gnutls_session_t session)
 	return session->internals.record_buffer.byte_length;
 }
 
+#define NO_TIMEOUT_FUNC_SET(session) unlikely(session->internals.pull_timeout_func == gnutls_system_recv_timeout \
+	     && session->internals.pull_func != system_read)
+
 /*-
  * record_check_unprocessed:
  * @session: is a #gnutls_session_t structure.
